1.javafx开发笔记;jdk11 配置